Enable virtual keyboard

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -20,3 +20,4 @@ html/custom_html_shell=""
 html/head_include=""
 custom_template/release=""
 custom_template/debug=""
+html/experimental_virtual_keyboard=true
