--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,23 +1,41 @@
 [preset.0]
 
-name="HTML5"
-platform="HTML5"
+name="Web"
+platform="Web"
 runnable=true
+advanced_options=false
+dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path=""
-patch_list=PoolStringArray(  )
-script_export_mode=1
-script_encryption_key=""
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
+variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
+html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
-custom_template/release=""
-custom_template/debug=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=true
+progressive_web_app/enabled=true
+progressive_web_app/ensure_cross_origin_isolation_headers=true
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
+progressive_web_app/background_color=Color(0, 0, 0, 1)
